Wrapping contained Twine demos in iframe with custom exit message, using bit of JS to fake php args wheeee (maybe everyone else realized they could do that and I just now realized it was a thing)

--- a/HP Labs Main Twine and JS Projects/index.html
+++ b/HP Labs Main Twine and JS Projects/index.html
@@ -207,13 +207,15 @@ tw-icon:hover {
 	-webkit-animation:appear 0ms step-start;
 	animation:appear 0ms step-start
 }
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">
 
 
 
 
 
-</script><tw-passagedata pid="1" name="Here is where it starts" tags="" position="393.6666666666667,560" size="100,100">&lt;h3&gt;Hidden Passages 2: R&amp;D prototype&lt;/h3&gt;
+
+</script><tw-passagedata pid="1" name="Here is where it starts" tags="" position="393,560" size="100,100">&lt;h3&gt;Hidden Passages 2: R&amp;D prototype&lt;/h3&gt;
 
 [[debug path]]: demos quick access
 
@@ -221,31 +223,31 @@ tw-icon:hover {
 
 [[main office-&gt;officeStart]]: jump to player hub world
 
-[[writing experiments]]: early tests, most won&#39;t stick</tw-passagedata><tw-passagedata pid="2" name="debug path" tags="" position="348.6666666666667,710" size="100,100">[[prototypes not yet categorized into areas]]
+[[writing experiments]]: early tests, most won&#39;t stick</tw-passagedata><tw-passagedata pid="2" name="debug path" tags="" position="348,710" size="100,100">[[prototypes not yet categorized into areas]]
 By Time Period
 [[1980s time warp]]
 [[2020 present day office]]
 [[year 7020 far future]]
-note: there are likely to be other spaces and realms added, but these time shifted versions of the main prototyping office/labs area are a start</tw-passagedata><tw-passagedata pid="3" name="playerPath1-amnesia" tags="" position="868.3333333333334,134.66666666666666" size="100,100">You wake up laid out on the hardwood floor, opening your eyes to see fluorescent light tubes humming overhead.
+note: there are likely to be other spaces and realms added, but these time shifted versions of the main prototyping office/labs area are a start</tw-passagedata><tw-passagedata pid="3" name="playerPath1-amnesia" tags="" position="868,134" size="100,100">You wake up laid out on the hardwood floor, opening your eyes to see fluorescent light tubes humming overhead.
 
 [[I get up, checking myself over to ensure I&#39;m unharmed.-&gt;getUp]]
 
-[[I stay down a bit longer, concentrating in an effort to remember how I got here, worried that if I begin using my attention on surroundings my recent memory will be lost like a dream.-&gt;stayDown]]</tw-passagedata><tw-passagedata pid="4" name="1980s time warp" tags="" position="151.66666666666666,859" size="100,100">This will be a place for retro Apple IIe / Atari / VHS / NES era glitch art stuff
+[[I stay down a bit longer, concentrating in an effort to remember how I got here, worried that if I begin using my attention on surroundings my recent memory will be lost like a dream.-&gt;stayDown]]</tw-passagedata><tw-passagedata pid="4" name="1980s time warp" tags="" position="151,859" size="100,100">This will be a place for retro Apple IIe / Atari / VHS / NES era glitch art stuff
 
-(link: &quot;DIR/BBS, by McFunkypants&quot;)[(goto-url: &#39;mcfunkypants/mcf-index.html&#39;)]</tw-passagedata><tw-passagedata pid="5" name="2020 present day office" tags="" position="264.6666666666667,860" size="100,100">This area might have the most recognizably &quot;normal&quot; things like single mechanic tiny gameplay prototypes
+(link: &quot;DIR/BBS, by McFunkypants&quot;)[(goto-url: &#39;mcfunkypants/mcf-index.html&#39;)]</tw-passagedata><tw-passagedata pid="5" name="2020 present day office" tags="" position="264,860" size="100,100">This area might have the most recognizably &quot;normal&quot; things like single mechanic tiny gameplay prototypes
 
 No others are here yet, use back option on the left to return
 
-(link: &quot;EyeForcz clock&quot;)[(goto-url: &#39;webgl-builds/clock/clock.html&#39;)]</tw-passagedata><tw-passagedata pid="6" name="year 7020 far future" tags="" position="371.6666666666667,860" size="100,100">Here is the place for intentionally weird, possibly hard to decipher stuff, trying to imagine what forms and features interactivity might take on in the far distant future. These don&#39;t have to be tech (or biotech), maybe somebody figures out something like magic from an alien species between now and then, who knows. The more &quot;what am I looking at, and how did they do that&quot; the better, for these :)
+(link: &quot;EyeForcz clock&quot;)[(goto-url: &#39;webgl-builds/clock/clock.html&#39;)]</tw-passagedata><tw-passagedata pid="6" name="year 7020 far future" tags="" position="371,860" size="100,100">Here is the place for intentionally weird, possibly hard to decipher stuff, trying to imagine what forms and features interactivity might take on in the far distant future. These don&#39;t have to be tech (or biotech), maybe somebody figures out something like magic from an alien species between now and then, who knows. The more &quot;what am I looking at, and how did they do that&quot; the better, for these :)
 
-(link: &quot;Tumult eyelid sticker, by Chris D&quot;)[(goto-url: &#39;chrisdeleon_mad_science/tumult.html&#39;)]</tw-passagedata><tw-passagedata pid="7" name="prototypes not yet categorized into areas" tags="" position="26.666666666666664,861" size="100,100">(link: &quot;mdfewkes DM&quot;)[(goto-url: &#39;mdfewkes/DM.html&#39;)]
+(link: &quot;Tumult eyelid sticker, by Chris D&quot;)[(goto-url: &#39;chrisdeleon_mad_science/tumult.html&#39;)]</tw-passagedata><tw-passagedata pid="7" name="prototypes not yet categorized into areas" tags="" position="24.333333333333332,861" size="100,100">(link: &quot;mdfewkes DM&quot;)[(goto-url: &#39;mdfewkes/DM.html&#39;)]
 (link: &quot;mdfewkes tb&quot;)[(goto-url: &#39;mdfewkes/Tb.html&#39;)]
 (link: &quot;brianjb demo&quot;)[(goto-url: &#39;brianjb/bjb-index.html&#39;)]
-(link: &quot;kornel demo&quot;)[(goto-url: &#39;kornel/kornel-index.html&#39;)]
+(link: &quot;kornel demo&quot;)[(goto-url: &#39;twine_frame.html?phrase=Put_down_the_newspaper&amp;file=kornel_kornel-index~&#39;)]
 (link: &quot;jchingames demo&quot;)[(goto-url: &#39;jchingames_experiments/first.html&#39;)]
-(link: &quot;rybar demo&quot;)[(goto-url: &#39;rybar/twineTestLost/Lost.html&#39;)]
+(link: &quot;rybar demo&quot;)[(goto-url: &#39;twine_frame.html?phrase=Drop_the_book&amp;file=rybar_twineTestLost_Lost~&#39;)]
 
-Note: we don&#39;t yet have a way figured out to convenient add a persistent &quot;put this one down&quot; kind of link at top of Twine projects. We can maybe find a way to open them within an iFrame, with the quit link separate from the main Twine navigation for it?</tw-passagedata><tw-passagedata pid="8" name="getUp" tags="" position="990,138.33333333333334" size="100,100">You find that you&#39;re physically unharmed, and casual office outfit seems undisturbed, but your pockets are empty. No wallet, no phone, no keys.
+Note: we don&#39;t yet have a way figured out to convenient add a persistent &quot;put this one down&quot; kind of link at top of Twine projects. We can maybe find a way to open them within an iFrame, with the quit link separate from the main Twine navigation for it?</tw-passagedata><tw-passagedata pid="8" name="getUp" tags="" position="990,138" size="100,100">You find that you&#39;re physically unharmed, and casual office outfit seems undisturbed, but your pockets are empty. No wallet, no phone, no keys.
 
 You do find glasses, hanging from on neck of your shirt, which is startling, because you&#39;re pretty sure you don&#39;t own or need glasses.
 
@@ -257,7 +259,7 @@ It feels unlikely that you&#39;ll be able to remember what happened.
 
 A number of possible theories spring to mind. You&#39;re unable to convince yourself which, if any, are real, or if they&#39;re all just the brain&#39;s eagerness to have an answer to replace uncertainty.
 
-[[Get up-&gt;getUp]].</tw-passagedata><tw-passagedata pid="10" name="writing experiments" tags="" position="564.6666666666666,854" size="100,100">A few ideas of scenes that we couldn&#39;t do well without text
+[[Get up-&gt;getUp]].</tw-passagedata><tw-passagedata pid="10" name="writing experiments" tags="" position="564,854" size="100,100">A few ideas of scenes that we couldn&#39;t do well without text
 
 [[Chaotic amount of papers, books, high ceilings.-&gt;hugeLibrary]]
 
@@ -265,11 +267,11 @@ A number of possible theories spring to mind. You&#39;re unable to convince your
 
 [[Area inspired by Control game-&gt;controlTest]]
 
-[[Myst island inspired space-&gt;mystTest]]</tw-passagedata><tw-passagedata pid="11" name="hugeLibrary" tags="" position="439.6666666666667,1007" size="100,100">The door felt much heavier than expected, leaning into it full your full weight until you could just barely squeeze through the crack. The door abruptly shut behind you, as the flood of books on the other side slid back into place.
+[[Myst island inspired space-&gt;mystTest]]</tw-passagedata><tw-passagedata pid="11" name="hugeLibrary" tags="" position="439,1007" size="100,100">The door felt much heavier than expected, leaning into it full your full weight until you could just barely squeeze through the crack. The door abruptly shut behind you, as the flood of books on the other side slid back into place.
 
 It&#39;s as if the high ceiling is being held up by pillars of paper.
 
-Packed shelves line the walls. Walking on the books is tricky, between feet slipping, covers tearing, and the pile shifting.</tw-passagedata><tw-passagedata pid="12" name="timeMachineEffect" tags="" position="679.6666666666666,1004" size="100,100">Brightness consumes the room, until with your eyes shut you can hear the walls begin to buckle and crack. You glimpse alternating darkness clean through your eyelids, peeking to reorient just long enough to see the ceiling swirling like soup, seemingly dead ahead of you now instead of above. Did you turn and now can&#39;t trust your senses, or did the whole world spin beneath you? Gripping for the metal arm rests of the chair they give way, slipping, squishing, sticking to your hands, turned to hot butter. Pulling your arms in close, deeper unease sets in when you realize you&#39;re no longer able to touch your own body.
+Packed shelves line the walls. Walking on the books is tricky, between feet slipping, covers tearing, and the pile shifting.</tw-passagedata><tw-passagedata pid="12" name="timeMachineEffect" tags="" position="679,1004" size="100,100">Brightness consumes the room, until with your eyes shut you can hear the walls begin to buckle and crack. You glimpse alternating darkness clean through your eyelids, peeking to reorient just long enough to see the ceiling swirling like soup, seemingly dead ahead of you now instead of above. Did you turn and now can&#39;t trust your senses, or did the whole world spin beneath you? Gripping for the metal arm rests of the chair they give way, slipping, squishing, sticking to your hands, turned to hot butter. Pulling your arms in close, deeper unease sets in when you realize you&#39;re no longer able to touch your own body.
 
 Then, darkness and silence. Absolute darkness. Weightless.
 
@@ -277,13 +279,13 @@ A loud crash.
 
 You&#39;re soaking wet, dense rain hammering down, slowed by the dense jungle canopy, coming down hard enough or long enough that you&#39;re up to your ankles in flood water. Where are you?
 
-When are you?</tw-passagedata><tw-passagedata pid="13" name="controlTest" tags="" position="559.6666666666666,1009" size="100,100">Your skin tingles with a cool, numbing sensation as you stumble through the portal. There&#39;s no ceiling here, but a night sky packed with ultrabright stars - unmistakably in the wrong positions for any eartlhy constellations.
+When are you?</tw-passagedata><tw-passagedata pid="13" name="controlTest" tags="" position="559,1009" size="100,100">Your skin tingles with a cool, numbing sensation as you stumble through the portal. There&#39;s no ceiling here, but a night sky packed with ultrabright stars - unmistakably in the wrong positions for any eartlhy constellations.
 
 Tall, dark, harshly faceted stones sparkle around you, opening into a vast chasm ahead, like an emptied lake.
 
 Orange, glowing bodies drift about. It&#39;s unclear whether they&#39;re ignoring you, somehow unable to see you, or not alive at all.
 
-Are you going to find out?</tw-passagedata><tw-passagedata pid="14" name="mystTest" tags="" position="799.6666666666666,1004" size="100,100">You&#39;ve found a place where time doesn&#39;t seem to pass.
+Are you going to find out?</tw-passagedata><tw-passagedata pid="14" name="mystTest" tags="" position="799,1004" size="100,100">You&#39;ve found a place where time doesn&#39;t seem to pass.
 
 The only noise here is gentle wind, and water lapping at the shore. The cloudless sky glows as if it&#39;s midday, but there&#39;s no sun overhead.
 
@@ -312,7 +314,7 @@ Classical statues
 [[Go to graveyard area-&gt;graveyard]]</tw-passagedata><tw-passagedata pid="19" name="lab" tags="" position="1866,560" size="100,100">Science lab, chemicals and inventions, like a hospital area
 
 [[Time machine to 1990 office-&gt;backInTime]]</tw-passagedata><tw-passagedata pid="20" name="graveyard" tags="" position="1641,842" size="100,100">dark, Bloodborne-ish, feels long ago</tw-passagedata><tw-passagedata pid="21" name="insideBook" tags="" position="1298,553" size="100,100">World inside a book, myst inspired but with its own twist</tw-passagedata><tw-passagedata pid="22" name="futureTower" tags="" position="1626,272" size="100,100">overlooking city in all directions
-maybe only see city here with glasses off?</tw-passagedata><tw-passagedata pid="23" name="backInTime" tags="" position="2005,565" size="100,100">1990 version of main office area, start by hearing a fax?</tw-passagedata><tw-passagedata pid="24" name="playerPathTests" tags="" position="682.0000000000001,398.33333333333337" size="100,100">[[waking up with amnesia-&gt;playerPath1-amnesia]]
+maybe only see city here with glasses off?</tw-passagedata><tw-passagedata pid="23" name="backInTime" tags="" position="2005,565" size="100,100">1990 version of main office area, start by hearing a fax?</tw-passagedata><tw-passagedata pid="24" name="playerPathTests" tags="" position="682,398" size="100,100">[[waking up with amnesia-&gt;playerPath1-amnesia]]
 
 [[teleported here-&gt;playerPath2-teleporter]]
 
@@ -322,13 +324,13 @@ maybe only see city here with glasses off?</tw-passagedata><tw-passagedata pid="
 
 [[alien clone-&gt;playerPath5-alienClone]]
 
-[[street office letter-&gt;playerPath6-officeLetter]]</tw-passagedata><tw-passagedata pid="25" name="playerPath2-teleporter" tags="" position="938.6666666666667,265.00000000000006" size="100,100">A loud hum fills your ears. It would hurt if it went on longer, but it&#39;s just long enough to tense up reflexively, as if you could somehow dodge it.
+[[street office letter-&gt;playerPath6-officeLetter]]</tw-passagedata><tw-passagedata pid="25" name="playerPath2-teleporter" tags="" position="938,265" size="100,100">A loud hum fills your ears. It would hurt if it went on longer, but it&#39;s just long enough to tense up reflexively, as if you could somehow dodge it.
 
 Your starched collar is warm and moist from sweat. Pulling your tie loose to breathe easier, you glance down just as the lower half of your legs are finishing phasing in. They&#39;ve always advised you not to look down, but now that you finally got the chance to do this, it&#39;s hard to look away. They warned that would probably happen, too.
 
 An flashing orange glow accompanies the transition. You can&#39;t tell whether it&#39;s coming from your legs, or a result effect of eyeballs adjusting as their particles slide tightly back together.
 
-[[Time to get started.-&gt;officeStart]]</tw-passagedata><tw-passagedata pid="26" name="playerPath3-literal" tags="" position="940.3333333333335,376.6666666666667" size="100,100">Moments ago I was at home, on my computer, minding my own business.
+[[Time to get started.-&gt;officeStart]]</tw-passagedata><tw-passagedata pid="26" name="playerPath3-literal" tags="" position="940,376" size="100,100">Moments ago I was at home, on my computer, minding my own business.
 
 I followed a few links through HomeTeamGameDev.com, and I don&#39;t fully understand what I&#39;m looking at.
 
@@ -336,7 +338,7 @@ Curiosity got me this far, why not have a quick look around?
 
 Maybe there&#39;s something interesting to see here.
 
-[[Explore the office.-&gt;officeStart]]</tw-passagedata><tw-passagedata pid="27" name="playerPath4-officeJob" tags="" position="928.6666666666667,500" size="100,100">Y A W N
+[[Explore the office.-&gt;officeStart]]</tw-passagedata><tw-passagedata pid="27" name="playerPath4-officeJob" tags="" position="928,500" size="100,100">Y A W N
 
 Here&#39;s to another day at the digital prototyping lab.
 
@@ -344,7 +346,7 @@ Am I really the first person to reach the office today? Where is everyone?
 
 Whatever, all else being equal, I&#39;d rather them catch me working.
 
-[[It&#39;s time to start the workday.-&gt;officeStart]]</tw-passagedata><tw-passagedata pid="28" name="playerPath5-alienClone" tags="" position="935.3333333333335,621.6666666666667" size="100,100">I can&#39;t believe they&#39;re expecting me to stand and walk with just two legs.
+[[It&#39;s time to start the workday.-&gt;officeStart]]</tw-passagedata><tw-passagedata pid="28" name="playerPath5-alienClone" tags="" position="935,621" size="100,100">I can&#39;t believe they&#39;re expecting me to stand and walk with just two legs.
 
 I reach down and squeeze the mess of meat and fat on my sides. If this is the body ᖽᐸᓍᘉᑢᕴᓰᕲ picked for me, I&#39;m sure there&#39;s a good reason.
 
@@ -358,13 +360,13 @@ I can&#39;t believe they all really live like this.
 
 Disgusting.
 
-Alright, [[I&#39;ve got to do my best to blend in.-&gt;officeStart]]</tw-passagedata><tw-passagedata pid="29" name="playerPath6-officeLetter" tags="" position="930.3333333333335,765.0000000000001" size="100,100">Walking down the city street one day, you notice an unassuming office just across road that you could swear was never there before.
+Alright, [[I&#39;ve got to do my best to blend in.-&gt;officeStart]]</tw-passagedata><tw-passagedata pid="29" name="playerPath6-officeLetter" tags="" position="930,765" size="100,100">Walking down the city street one day, you notice an unassuming office just across road that you could swear was never there before.
 
 You&#39;ve been taking this route regularly for years, and you&#39;d never noticed so much as a construction fence. You&#39;d leave it alone, but somethings bothering you about it, maybe the way it&#39;s so hard to picture what was there before. Had you just never paid attention? Was this always there?
 
 There&#39;s an envelope on the ground near the door, already torn open with a folded letter hanging partway out, gentle scooting and twisting in the wind. Perhaps it fell from the mail slot.
 
-Wouldn&#39;t want it to blow away - better [[cross the street to check it out.-&gt;openGroundLetter]]</tw-passagedata><tw-passagedata pid="30" name="openGroundLetter" tags="" position="1075.3333333333335,763.3333333333334" size="100,100">You cross the street and step on the letter, so it won&#39;t blow away while you think of what to do next.
+Wouldn&#39;t want it to blow away - better [[cross the street to check it out.-&gt;openGroundLetter]]</tw-passagedata><tw-passagedata pid="30" name="openGroundLetter" tags="" position="1075,763" size="100,100">You cross the street and step on the letter, so it won&#39;t blow away while you think of what to do next.
 
 You consider shoving it back into the door&#39;s mail slot.
 
