--- a/HP Labs Main Twine and JS Projects/index.html
+++ b/HP Labs Main Twine and JS Projects/index.html
@@ -238,7 +238,9 @@ note: there are likely to be other spaces and realms added, but these time shift
 
 No others are here yet, use back option on the left to return
 
-(link: &quot;EyeForcz clock&quot;)[(goto-url: &#39;webgl-builds/clock/clock.html&#39;)]</tw-passagedata><tw-passagedata pid="6" name="year 7020 far future" tags="" position="371,860" size="100,100">Here is the place for intentionally weird, possibly hard to decipher stuff, trying to imagine what forms and features interactivity might take on in the far distant future. These don&#39;t have to be tech (or biotech), maybe somebody figures out something like magic from an alien species between now and then, who knows. The more &quot;what am I looking at, and how did they do that&quot; the better, for these :)
+(link: &quot;Chris cube WIP&quot;)[(goto-url: &#39;unity_loader.html?phrase=Eject_game&amp;file=chrisprototype&#39;)]
+(link: &quot;EyeForcz clock&quot;)[(goto-url: &#39;unity_loader.html?phrase=Quit_game&amp;file=clock&#39;)]
+(link: &quot;EyeForcz table&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=turntable&#39;)]</tw-passagedata><tw-passagedata pid="6" name="year 7020 far future" tags="" position="371,860" size="100,100">Here is the place for intentionally weird, possibly hard to decipher stuff, trying to imagine what forms and features interactivity might take on in the far distant future. These don&#39;t have to be tech (or biotech), maybe somebody figures out something like magic from an alien species between now and then, who knows. The more &quot;what am I looking at, and how did they do that&quot; the better, for these :)
 
 (link: &quot;Tumult eyelid sticker, by Chris D&quot;)[(goto-url: &#39;chrisdeleon_mad_science/tumult.html&#39;)]</tw-passagedata><tw-passagedata pid="7" name="prototypes not yet categorized into areas" tags="" position="24.333333333333332,861" size="100,100">(link: &quot;mdfewkes DM&quot;)[(goto-url: &#39;mdfewkes/DM.html&#39;)]
 (link: &quot;mdfewkes tb&quot;)[(goto-url: &#39;mdfewkes/Tb.html&#39;)]
