Adding exit link to BrianJB html file :)

--- a/HP Labs Main Twine and JS Projects/brianjb/bjb-index.html
+++ b/HP Labs Main Twine and JS Projects/brianjb/bjb-index.html
@@ -10,6 +10,7 @@
         #gameCanvas { margin:0; padding:0; }
     </style>
 </head>
+<a href="../index.html">exit</a><br/>
 <canvas id="gameCanvas" width="800" height="600"></canvas>
 
 <script type="text/javascript">
