defrag animation WIP

--- a/HP Labs Main Twine and JS Projects/mcfunkypants/mcf-index.html
+++ b/HP Labs Main Twine and JS Projects/mcfunkypants/mcf-index.html
@@ -50,7 +50,43 @@ Connected at 1200 baud!
 
 </pre>
 
-<pre id='DIR'>
+<pre id='DEFRAG'>
+┌──────────────────────────────────────────────┐
+│ Defragmenting Disc A:\ - 131,072 bytes total │
+├──────────────────────────────────────────────┤
+│ ░░▓░░░░▓▓░░░░░░░░░░░░░░░░▓░░░░░░░▒▒░░░░░░░░░ │
+│ ░░░░░░░░░░░░░░░░░▒░░░░░░░░░░░▒░░░░░░░░░░░░░░ │
+│ ░░░░░░▒░░░░░░░░░░░░░░░░▒▒▒▒░░░░░░░░░░░░▒▒▒▒░ │
+│ ░░░░░░░░░░░░▓▓░░░░░░░░░░░░░░░░░░░░░▓░░░░░░░░ │
+│ ░░░░░░░░░░░░░░░░░░░▓░░░░░░░░░▒▒▒░░░░░░░░░░░░ │
+│ ░░░░░░░░░░░░░░░░▒░░░░░░░░░░░░░░░░░░░░░░░░░░░ │
+│ ░░░░░░░▒▒▒▒░░░░░░░░░░░░▒░░░░░░░░░░░░░░░░░░░░ │
+│ ░░░░░░▒░░░░░░░░░░▒▒▒▒░░░░░░░░░░░░░░░░░░▒▒▒▒░ │
+│ ░░░░▓▓░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▓░░░░░░░░ │
+│ ░░░░░░░░░░░░░░░░░░░▓░░░░░░░░░▒▒▒░░░░░░░░░░░░ │
+└──────────────────────────────────────────────┘
+</pre>
+
+<pre id='DEFRAG2'>
+┌──────────────────────────────────────────────┐
+│ Defragmenting Disc A:\ - 131,072 bytes total │
+├──────────────────────────────────────────────┤
+│ ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓ │
+│ ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓ │
+│ ▓▓▓▓▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒ │
+│ ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒░░░░░░░░░░░░░░░░░░░░░░ │
+│ ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ │
+│ ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ │
+│ ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ │
+│ ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ │
+│ ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ │
+└──────────────────────────────────────────────┘
+</pre>
+    
+<pre id='CLS'>
+<pre>
+
+</pre><pre id='DIR'>
 Volume in drive A is TOPSCRET
 Volume Serial Number is 9A3E-085C
 
