BBS sound effects hooked up in code (typing, loading, modem connect)

--- a/HP Labs Main Twine and JS Projects/mcfunkypants/mcf-index.html
+++ b/HP Labs Main Twine and JS Projects/mcfunkypants/mcf-index.html
@@ -17,7 +17,11 @@
         title='Click here to go back.'
         href='javascript:window.history.back();'></a>
 </div>
-        
+
+<audio id='keyboardSound'><source src="keyboard.mp3" type="audio/mpeg"></audio>
+<audio id='discSound'><source src="disc_drive.mp3" type="audio/mpeg"></audio>
+<audio id='modemSound'><source src="modem_connect.mp3" type="audio/mpeg"></audio>
+
 <pre id='BOOT'>
 HomeTeam (R) HT-DOS Version 3.22
 Copyright (C) 1989-1998 HTGD Inc.
