ascii art for use as BBS logos, based on CC0 work by roy/sac

--- a/HP Labs Main Twine and JS Projects/mcfunkypants/mcf-index.html
+++ b/HP Labs Main Twine and JS Projects/mcfunkypants/mcf-index.html
@@ -162,5 +162,75 @@ Directory of A:
 12345678901234567890123456789012345678901234567890123456789012345678901234567890
 </pre>
 
+<pre id='DTC'>
+▄▄▄ ███▀▀▀██▄ ██▀███▀██ ▄██▀▀▀███ ▄▄▄
+█▄█ █▓█ ░ █▓█ ██ █▓█ ██ █▓█ ░ ███ █▄█
+▓▓▓ █▒█ ▒ █▒█    █▒█    █▒█ ▒     ▓▓▓
+▒▒▒ █▓█ ░ █▓█ ▒▒ █▓█ ▒▒ █▓█ ░ ███ ▒▒▒
+░░░ ███▄▄▄██▀ ░░ ███ ░░ ▀██▄▄▄███ ░░░
+▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
+</pre>
+<pre id='DNS'>
+▀██▀▀▀▀▀▀▀▀███▄ ▀█▀▀▀▀▀███▄ ▄▓██▀▀▀██▀▀ ■·
+· ▓ ████ ░ █▓▓█   ▄█ ░ █▓▓█ ████   ▀   ▀ ▄·
+█▄  ██▓█ ░ █▒▒█ ▄██▓ ░ █▒▒█  ▀▀▀▀▀▀███▄ ██r
+▓▓▓ ████ ░ █░░█ ████ ░ █░░█ █▄  ░░ █▓▓█ ▓▓o
+▒▒▒ ████   ████ ████ ░ ████ █▓▓▄   ████ ▒▒y
+░░░ ▀▓▀▀▀▀▀▀▀▀  ▀▀▀▀   ▀▀▀▓ ▀▀▀▀▀▀▀▀▀▀  ░░■
+▄▄▄▄▄▄▄█▓▒░ DYNASTY ░▒▓██▄▄▄██▓▒░ ░▒▓██▄▄▄·
+█▓▒░   RELEASE DATE:  08.APRIL 1996   ░▒▓█
+▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
+</pre>
+
+<pre id='DMN'>
+────█▄   ▄  ▄   ▄  ▄▄▄▄▄
+▄██▀▄███ ███▀ █▄▀██▄ █▓█ ▀█▄  r
+█▓█  █▓█ █▓█  █  █▓█ █▓█  █▓█ o
+█▓█  █▓█ ███  ▐  ███ ███  ███ y
+┌▀██▄▀██▀ █▀  ─── █▀  █▀ ─ █▀ ─┐
+└──── ▀ ─────D E M O N─────────┘
+</pre>
+
+<pre id='DLX'>
+:▀▀▀██▄ ▄█▀███▀ █ ─── █▓ ███ ██ ██▓ ▄█▀███▀
+:█▓ █▓█ ██▄▄ ■ ██ ░░░ █▓ █▓█ ▀█▄██▀ ██▄▄ ■:
+|█▓ █▒█ ██ ▄▄▄ ██ ▄▄▄ ██ █▒█ ██ █▓█ ██ ▄▄▄|
+│██▄██▀ ▀█▄█▄▓ ▀█▄██▓ ▀█▄██▀ ██ ███ ▀█▄█▄▓│
+└──────▀─────────────────────────────roy──┘
+</pre>
+
+<pre id='CTK'>
+▄ ▄██▀▀███▀▀████▀███▀ ▄  █▄ ▀        ▄
+ ▄██   ▓▀ ▄ █▓█  ▓▀ ▄█  ▄█▓█  roy ▀ ▀█▄
+▀█▓█ ░ ▄    █▓█ ▀  ▀██▄█▀██▄ ▀ ▀▀▀▀▀▀▀▀▓
+  ██▄  █▓▄  █▓█ ▄  █▓█▀  █▓█ Cortex'97 ▓
+░  ▀▀▀▀█▀▀▀ ███▀   ▀██ ░ █▀ ▄▄▄▄▄▄▄▄▄▄▄▓
+▀ ▀▀▀▀▄ ▄▀▀ █▀  ▀▀▀  ▀ ▀▄ ▄▀
+       ▀                 ▀
+</pre>
+
+<pre id='NUM'>
+▄▄ ▄ ▄▄▄▄ ▄ █▀▀▀▄ ▄▀▀▀▄ ▄▀▀▀▄ █▀▀▀▄ █▀▀▀▄ ▄▀▀▀▀ ▄ ▄▄▄▄ ▄  ▄
+▀ ▄ ▀▄█▀▄██ █  ▀▄ █   █ █ ▄▄█ █▄▄▄▀ █   █  ▀▀▀▄ ██▀█▄█▀▄▀▄ ▀
+▀   ▀▀ ▀ ▀▀ █▄▄▄▀ ▀▄▄▄▀ █   █ █   █ █▄▄▄▀ ▄▄▄▄▀ ▀ ▀▀▀ ▀ ▀  ▀
+
+▀ ▀▀▀ ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀ ▀▀▀ ▀
+  BOARD            SYSOP        NUMBER      NODES        STATUS
+▄ ▄▄▄ ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄ ▄▄▄ ▄
+</pre>
+
+<pre id='MP3'>
+░│ ░▀▄ ▄▀▓ ▄▀▓ ▀▓▀ ▄▀▓ ▄▀▄ ▓▀▄ ▄▀▓ ▄▀▓ │░
+▓▒ ▒▄▀ ▓▄  ▓▄▓  ▓  ▓▄  ▓ ▓ ▓▄▀ ▓▄▄ ▓▄ ▄▒▓r
+▒░ ▓ ▓ ▒ ▄ ▒ ▒  ▒  ▒ ▄ ▒ ▒ ▒ ▓ ▒ ▓ ▒ ▄ ░▒o
+░│ ▓▄▀ ▀▄▓ ░ ░  ░  ░   ▀▄▀ ░ ▒ ▀▄▒ ▀▄▓ │░y
+ └─────────mp3's for everyone !────────┘
+</pre>
+
+<pre id='ASCII'>
+Public domain ASCII art by roy/sac (CC0):
+DTC, DNS, DMN, DLX, CTK, NUM, MP3
+</pre>
+
 </body>
 </html>
