Working on combining webGL scenes into one export, WIP (webGL unity scenes will be broken in this commit while I work on next step of it)

--- a/HP Labs Main Twine and JS Projects/unity_loader.html
+++ b/HP Labs Main Twine and JS Projects/unity_loader.html
@@ -29,7 +29,8 @@ function replaceAll(inStr, replThis, replWith) {
 }
 
 var args = getUrlVars();
-buildName = args["file"];
+buildName = "common";
+sceneName = args["file"];
 window.onload = function() {
 	phrasePart = document.getElementById("phrase");
 	phraseArg = args["phrase"];
