WIP test on scene switcher (webGL builds will not work yet)

--- a/HP Labs Main Twine and JS Projects/unity_loader.html
+++ b/HP Labs Main Twine and JS Projects/unity_loader.html
@@ -41,6 +41,11 @@ window.onload = function() {
 
     <script>
       var unityInstance = UnityLoader.instantiate("unityContainer", "webgl-builds/Build/"+buildName+".json", {onProgress: UnityProgress});
+
+      function OnScenesReady(){
+          console.log("success! application is loaded")
+          unityInstance.SendMessage("MasterSwitcher","SceneLoad","SpinTest");
+      }
     </script>
   </head>
   <body>
